samples/_failures_safe/1761180452_77a93e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b283077f.c: In function ‘main’:
./samples/SAFE/__tmp_b283077f.c:153:5: error: expected identifier or ‘(’ at end of input
  153 |     int
      |     ^~~
./samples/SAFE/__tmp_b283077f.c:153:5: error: expected declaration or statement at end of input
